# xy-classics

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/sigils/: CruzPatea.tsx
src/i18n/: index.ts  types.ts
src/i18n/locales/: en.json  pt.json
