[package]
name = "xy-classics"
version = "0.0.1"
description = "XY Classics — desktop launcher for retro game collections."
authors = ["iuxyOG <iuryalmeida188@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/iuxyOG/xy-classics"
edition = "2021"

[lib]
# The `_lib` suffix avoids a name collision with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "xy_classics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Persistence (Phase 1+ library + Phase 3 vault metadata)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }

# System inspection (Phase 2+ emulator detection)
sysinfo = "0.32"

# Filesystem watching (Phase 2+ library scanner)
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"

# Hashing (Phase 3 savevault dedup)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression (Phase 3 savevault snapshots)
zstd = "0.13"
tar = "0.4"

# Identifiers (UUID v7 — monotonic, sortable)
uuid = { version = "1.11", features = ["v7", "serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 4 — gamepad input. Uncomment when wiring spatial nav to physical controllers.
# gilrs = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
